# pyOrigami

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.py  verify_boat.py
.github/workflows/: build.yml  ci-build.yml  ci-lint.yml
examples/: pajarita.doo  simple_boat.doo  verify_boat.py
pydoodle/: __init__.py  _bindings.cpp  commands.py  render.py  types.py  writer.py
pyorigami/: __init__.py  converters.py  engine.py  prologue.ps  ps.py  render.py  types.py
pyorigami/commands/: __init__.py  arrows.py  constructions.py  display.py  folds.py  geometry.py  header.py  layout.py  misc.py  paper.py  structure.py  transforms.py
pyorigami/geometry/: __init__.py  arrow.py  constants.py  edge.py  face.py  model.py  operations.py  symbols.py  vec2.py  vector.py  vertex.py
pyorigami/parsing/: __init__.py  base.py  file_parser.py  matcher.py  statement.py  tokenizer.py
tests/: test_render_formats.py
