[build-system]
requires = ["setuptools>=64", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOrigami"
version = "0.1.0"
description = "Python interface to the Doodle origami diagram tool"
requires-python = ">=3.9"

[project.optional-dependencies]
svg = ["pymupdf>=1.27"]

[tool.setuptools.packages.find]
include = ["pydoodle*"]

[tool.ruff]
target-version = "py39"
line-length = 120
select = ["E", "F", "W", "I"]
exclude = ["generated/", "doodle/", "build/", "dist/"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"
