[build-system]
requires = ["setuptools>=64", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "pyOrigami"
version = "0.1.0"
description = "Python interface to the Doodle origami diagram tool"
requires-python = ">=3.9"
dependencies = ["pymupdf>=1.27", "numpy>=1.24"]

[tool.setuptools.packages.find]
include = ["pyorigami*"]

[tool.setuptools.package-data]
pyorigami = ["*.ps"]

[tool.black]
line-length = 120
target-version = ["py39"]
exclude = '''
/(
    generated
  | doodle
  | build
  | dist
)/
'''

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_*"
